# lldb-imgui

./: .gitignore  .gitmodules  Brewfile  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
App/: main.cpp
Plugin/: PathTree.h  Plugin.cpp
PluginHost/: LLDB_Exposer.h  Logging.cpp  Logging.h  MainThreadHijacker.cpp  MainThreadHijacker.h  PluginHost.mm
libs/: CMakeLists.txt
lldb-imgui.xcodeproj/: project.pbxproj
src/AppDummy/: CMakeLists.txt  main.cpp
src/HostXcode/: CMakeLists.txt
src/HostXcode/include/: CocoaWrapper.h  DebugWindow.h  Debuggable.h  Logging.h  Registry.h
src/HostXcode/src/: CocoaWrapper.mm  Debuggable.cpp  HostXcode.mm  LLDB_Exposer.cpp
src/Plugin/: CMakeLists.txt
src/Plugin/src/: Cache.cpp  Cache.h  Dump.h  Functional.h  LLDB_Private.cpp  LLDB_Private.h  PathTree.h  Plugin.cpp
src/app/: CMakeLists.txt  dummy.cpp
src/lldb-imgui/: CMakeLists.txt
src/lldb-imgui/src/: App.cpp  App.h  Expose.cpp  Expose.h  MainRPCServer.cpp  MainRPCServer.mm  MainSDL.cpp  PluginLoader.h  PluginLoaderMacOS.mm
src/plugin-imgui-demo/: CMakeLists.txt
src/plugin-imgui-demo/src/: Plugin.cpp
